--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
